# aim-benchmark

./: CMakeLists.txt  README.md
AIMSchemaCampaignGenerator/: 300_campaigns_3KB-records.sql  300_campaigns_3KB-records.sqlite.db  README.md  campaigns.html
AIMSchemaCampaignGenerator/src/ch/ethz/systems/: Generator.java
common/: InitializerArray.h  Protocol.cpp  Protocol.hpp  Util.cpp  Util.hpp  blocking-consumer-queue.h  boost-interface.h  dimension-tables-mapping.cpp  dimension-tables-mapping.h  dimension-tables-unique-values.cpp  dimension-tables-unique-values.h  dimension-tables.cpp  dimension-tables.h  logger.h  serialization.h  system-constants.h
common/sqlite/: sqlite3.h
rta-client/: CMakeLists.txt  README.md  RTAClient.cpp  RTAClient.h  RTAClient.hpp  main.cpp  server-addresses.txt
rta-client/communication/: AbstractRTAClientCommunication.cpp  AbstractRTAClientCommunication.h  InfinibandRTAClientCommunication.cpp  InfinibandRTAClientCommunication.h  TCPRTAClientCommunication.cpp  TCPRTAClientCommunication.h
rta-client/query/: AbstractQueryClientObject.cpp  AbstractQueryClientObject.h  Query1ClientObject.cpp  Query1ClientObject.h  Query2ClientObject.cpp  Query2ClientObject.h  Query3ClientObject.cpp  Query3ClientObject.h  Query4ClientObject.cpp  Query4ClientObject.h  Query5ClientObject.cpp  Query5ClientObject.h  Query6ClientObject.cpp  Query6ClientObject.h  Query7ClientObject.cpp  Query7ClientObject.h
sep-client/: CMakeLists.txt  README.md  SEPClient.cpp  SEPClient.h  SEPClient.hpp  main.cpp  server-addresses.txt
sep-client/communication/: AbstractSEPClientCommunication.cpp  AbstractSEPClientCommunication.h  InfinibandSEPClientCommunication.cpp  InfinibandSEPClientCommunication.h  TCPSEPClientCommunication.cpp  TCPSEPClientCommunication.h
server/: AimContext.hpp  CMakeLists.txt  Connection.cpp  Connection.hpp  CreateSchema.cpp  CreateSchema.hpp  CreateSchemaKudu.cpp  CreateSchemaKudu.hpp  Populate.cpp  Populate.hpp  PopulateKudu.cpp  PopulateKudu.hpp  ProcessEvent.cpp  Q1Transaction.cpp  Q2Transaction.cpp  Q3Transaction.cpp  Q4Transaction.cpp  Q5Transaction.cpp  Q6Transaction.cpp  Q7Transaction.cpp  README.md  Transactions.cpp  Transactions.hpp  TransactionsKudu.cpp  TransactionsKudu.hpp  dynamic.cpp  kudu.cpp  kudu.hpp  main.cpp  meta_db.db
server/query/: AbstractQueryServerObject.cpp  AbstractQueryServerObject.h  Query1ServerObject.cpp  Query1ServerObject.h  Query2ServerObject.cpp  Query2ServerObject.h  Query3ServerObject.cpp  Query3ServerObject.h  Query4ServerObject.cpp  Query4ServerObject.h  Query5ServerObject.cpp  Query5ServerObject.h  Query6ServerObject.cpp  Query6ServerObject.h  Query7ServerObject.cpp  Query7ServerObject.h
server/rta/: Controller.cpp  Controller.h  concurrent_map.h  dim_column_finder.h  dimension_record.cpp  dimension_record.h  dimension_schema.cpp  dimension_schema.h  utils.h
server/rta/communication/: AbstractRTACommunication.cpp  AbstractRTACommunication.h  InfinibandRTACommunication.cpp  InfinibandRTACommunication.h  LocalRTACommunication.cpp  LocalRTACommunication.h  TCPRTACommunication.cpp  TCPRTACommunication.h
server/sep/: Math.h  OneDimRTree.h  aim_column_finder.h  aim_schema.cpp  aim_schema.h  aim_schema_builder.cpp  aim_schema_builder.h  aim_schema_entry.cpp  aim_schema_entry.h  am_record.cpp  am_record.h  campaign.cpp  campaign.h  campaign_index.cpp  campaign_index.h  campaign_index_builder.cpp  campaign_index_builder.h  conjunct.cpp  conjunct.h  entry_attr_index.h  event.cpp  event.h  predicate.cpp  predicate.h  schema_and_index_builder.cpp  schema_and_index_builder.h  sep.cpp  sep.h  sep_config.h.cmake  type_descriptor.cpp  type_descriptor.h  utils.cpp  utils.h  value.cpp  value.h  window.cpp  window.h
server/sep/communication/: AbstractSEPCommunication.cpp  AbstractSEPCommunication.h  InfinibandSEPCommunication.cpp  InfinibandSEPCommunication.h  LocalSEPCommunication.h  TCPSEPCommunication.cpp  TCPSEPCommunication.h
